--- a/client/src/components/layouts/Sidebar.module.css
+++ b/client/src/components/layouts/Sidebar.module.css
@@ -11,16 +11,6 @@
   z-index: 10;
 }
 
-.toggleButton {
-  background: none;
-  border: none;
-  color: var(--surface);
-  font-size: 24px;
-  margin: 16px 0;
-  cursor: pointer;
-  outline: none;
-}
-
 .icon {
   display: block;
   width: 24px;
